# pianocktail

./: .flake8  .gitignore  pianocktail.yaml  pyproject.toml  raw_dataset.yaml
pianocktail/: __main__.py  cli.py  config.py
pianocktail/audio/: audio_clip.py  music_record.py  raw_dataset.yaml
pianocktail/dataset/: raw_dataset.py
pianocktail/dataset/models/: __init__.py  artist.py  base.py  cocktail.py  genre.py  song.py
pianocktail/dataset/models/migrations/: 001_auto.py  002_auto.py  003_auto.py  004_auto.py
pianocktail/utils/: logging.py
