[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pianocktail"
version = "0.1.0"
description = "A library for creating musical cocktails"
authors = [
    { name = "pauloone"}
]
license = { text = "MIT" }
dependencies = [
    "torchaudio",
    "torch",
    "pyyaml",
    "docopt",
    "docopt-subcommands",
    "matplotlib"
]


[project.scripts]
pianocktail = "pianocktail.cli:cli"

[project.optional-dependencies]

test = [
  "flake8",
  "ipython",
  "flake8-bugbear"
]

contrib = [
  "pianocktail[test]", 
  "black",
  "ipython",
]

[tool.setuptools]
packages = ["pianocktail"]

[tool.black]
line-length = 180